<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgMediaCover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/icon_logo"
        android:scaleType="centerInside"
        android:layout_gravity="center"
        app:srcCompat="@drawable/setting_logo"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/text_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/setting_aplikasi"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchTheme"
                android:checked="false"
                android:text="@string/dark_mode"
                android:textSize="18sp"
                app:thumbIconSize="100dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_dark_mode"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/daily_reminder"
                android:textSize="18sp"
                app:thumbIconSize="100dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_notification"/>

        </LinearLayout>

</LinearLayout>